--- a/rs/Cargo.toml
+++ b/rs/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 crate-type = ["staticlib"]
 
 [dependencies]
+ciborium = "0.2.2"
 flume = { version = "0.12.0", features = ["select"] }
 serde = { version = "1", features = ["derive"] }
-serde_store = "0.2.2"
+serde_repr = "0.1"
